# OpenGDEMU

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gdb_gdemu.cfg  openocd_gdemu.cfg
CPU/: CMakeLists.txt  gcc_toolchain.cmake
CPU/app/: CMakeLists.txt  cyclone2.cpp  cyclone2.h  main.cpp  sam3u4e_flash.ld  sam3u4e_sram.ld
CPU/app/pata/: HDD_LBA48.cpp  HDD_LBA48.h  PATADevice.cpp  PATADevice.h
CPU/app/pata/cmds/: IdentifyDrive.h
CPU/cmsis/: CMakeLists.txt
CPU/cmsis/sam3u/include/: component-version.h  sam.h  sam3u.h  sam3u1c.h  sam3u1e.h  sam3u2c.h  sam3u2e.h  sam3u4c.h  sam3u4e.h  system_sam3u.h
CPU/cmsis/sam3u/include/component/: adc.h  adc12b.h  chipid.h  dmac.h  efc.h  gpbr.h  hsmci.h  matrix.h  pdc.h  pio.h  pmc.h  pwm.h  rstc.h  rtc.h  rtt.h  smc.h  spi.h  ssc.h  supc.h  tc.h  twi.h  uart.h  udphs.h  usart.h  wdt.h
CPU/cmsis/sam3u/include/instance/: adc.h  adc12b.h  chipid.h  dmac.h  efc0.h  efc1.h  gpbr.h  hsmci.h  matrix.h  pioa.h  piob.h  pioc.h  pmc.h  pwm.h  rstc.h  rtc.h  rtt.h  smc.h  spi.h  ssc.h  supc.h  tc0.h  twi0.h  twi1.h  uart.h  udphs.h  usart0.h  usart1.h  usart2.h  usart3.h  wdt.h
CPU/cmsis/sam3u/include/pio/: sam3u1c.h  sam3u1e.h  sam3u2e.h  sam3u4c.h  sam3u4e.h
CPU/drivers/: CMakeLists.txt
CPU/drivers/include/: board.h  sd_mmc.h
CPU/drivers/include/drivers/: common.h  cyclone_ps.h  gpio.h  pmc.h  uart.h  wdt.h
CPU/drivers/src/: cyclone_ps.cpp  gpio.cpp  hsmci.c  sd_mmc.c  uart.cpp
CPU/fpga/: CMakeLists.txt  OpenGDEMU.rbf
CPU/fpga/include/: Global.h  IDERegs.h  OpenGDEMURegs.h
CPU/fpga/src/: Global.cpp  IDERegs.cpp
CPU/log/: CMakeLists.txt
CPU/log/include/: log.h  trice.h  triceConfig.h
CPU/log/src/: log.cpp
CPU/rtos/: CMakeLists.txt  init.c  startup_sam3u.c  stdlib.cpp  system_sam3u.c
CPU/rtos/argon-rtos/src/: ar_config.h
CPU/rtos/argon-rtos/src/cortex_m/: ar_port.h
CPU/submodules/: CMakeLists.txt  fatfs.cmake  microchip-asf.cmake  umm-malloc.cmake
CPU/submodules/fatfs/source/: diskio.c  diskio_sam3u.c  ff.c
CPU/submodules/microchip-asf/common/components/memory/sd_mmc/: sd_mmc.c
CPU/submodules/microchip-asf/common/services/clock/: osc.h  pll.h  sysclk.h
CPU/submodules/microchip-asf/common/services/clock/sam3u/: sysclk.h
CPU/submodules/microchip-asf/common/services/clock/sams70/: genclk.h
CPU/submodules/microchip-asf/common/services/storage/ctrl_access/: ctrl_access.h
CPU/submodules/microchip-asf/sam/drivers/afec/: afec.c
CPU/submodules/microchip-asf/sam/drivers/crccu/: crccu.h
CPU/submodules/microchip-asf/sam/drivers/efc/: efc.c
CPU/submodules/microchip-asf/sam/drivers/hsmci/: hsmci.c
CPU/submodules/microchip-asf/sam/drivers/isi/: isi.c
CPU/submodules/microchip-asf/sam/drivers/mcan/: mcan.c
CPU/submodules/microchip-asf/sam/drivers/supc/: supc.c
CPU/submodules/microchip-asf/sam/drivers/twihs/: twihs.c
CPU/submodules/microchip-asf/sam/drivers/xdmac/: xdmac.h
CPU/submodules/microchip-asf/sam/utils/: compiler.h
CPU/submodules/microchip-asf/sam0/drivers/ac/: ac.h
CPU/submodules/microchip-asf/sam0/drivers/ac/ac_sam_l_c/: ac.c
CPU/submodules/microchip-asf/sam0/drivers/dma/: dma.c  dma.h
CPU/submodules/microchip-asf/sam0/drivers/events/: events.h  events_hooks.c
CPU/submodules/microchip-asf/sam0/drivers/pac/: pac.h
CPU/submodules/microchip-asf/sam0/drivers/rtc/: rtc_calendar.h
CPU/submodules/microchip-asf/sam0/drivers/wdt/: wdt.c  wdt.h
CPU/test/: CMakeLists.txt
CPU/test/blink/: CMakeLists.txt  main.cpp
CPU/test/cyclone2/: CMakeLists.txt  main.cpp  sam3u4e_flash.ld
CPU/test/sdcard/: CMakeLists.txt  main.cpp  sam3u4e_flash.ld
Containers/: CMakeLists.txt
Containers/QuartusII/: CMakeLists.txt  Dockerfile  entrypoint.sh  run.sh
Containers/SpinalHDL/: CMakeLists.txt  Dockerfile  entrypoint.sh
Containers/SymbiYosys/: CMakeLists.txt  Dockerfile  copy_to_output.sh  run.sh
FPGA/: CMakeLists.txt  OpenGDEMU.qpf  OpenGDEMU.qsf
FPGA/db/: OpenGDEMU.db_info
FPGA/quartus/: CMakeLists.txt  OpenGDEMU.qsf  OpenGDEMU.sdc
FPGA/quartus/db/: OpenGDEMU.(0).cnf.cdb  OpenGDEMU.(0).cnf.hdb  OpenGDEMU.(1).cnf.cdb  OpenGDEMU.(1).cnf.hdb  OpenGDEMU.(10).cnf.cdb  OpenGDEMU.(10).cnf.hdb  OpenGDEMU.(2).cnf.cdb  OpenGDEMU.(2).cnf.hdb  OpenGDEMU.(8).cnf.cdb  OpenGDEMU.(8).cnf.hdb  OpenGDEMU.(9).cnf.cdb  OpenGDEMU.(9).cnf.hdb  OpenGDEMU.ace_cmp.bpm  OpenGDEMU.ace_cmp.cdb  OpenGDEMU.ace_cmp.hdb  OpenGDEMU.asm.qmsg  OpenGDEMU.asm.rdb  OpenGDEMU.cbx.xml  OpenGDEMU.cmp.idb  OpenGDEMU.cmp.kpt  OpenGDEMU.cmp.rdb  OpenGDEMU.cmp0.ddb  OpenGDEMU.cmp1.ddb  OpenGDEMU.cmp2.ddb  OpenGDEMU.cmp_merge.kpt  OpenGDEMU.db_info  OpenGDEMU.eda.qmsg  OpenGDEMU.fit.qmsg  OpenGDEMU.hier_info  OpenGDEMU.hif  OpenGDEMU.ipinfo  OpenGDEMU.lpc.html  OpenGDEMU.lpc.rdb  OpenGDEMU.lpc.txt  OpenGDEMU.map.kpt  OpenGDEMU.map.qmsg  OpenGDEMU.map.rdb  OpenGDEMU.map_bb.hdb  OpenGDEMU.pplq.rdb  OpenGDEMU.pre_map.hdb  (+39 more)
FPGA/quartus/greybox_tmp/: cbx_args.txt
FPGA/quartus/incremental_db/compiled_partitions/: OpenGDEMU.db_info  OpenGDEMU.root_partition.cmp.ammdb  OpenGDEMU.root_partition.cmp.cdb  OpenGDEMU.root_partition.cmp.hdb  OpenGDEMU.root_partition.cmp.rcfdb  OpenGDEMU.root_partition.map.cdb  OpenGDEMU.root_partition.map.dpi  OpenGDEMU.root_partition.map.hbdb.cdb  OpenGDEMU.root_partition.map.hbdb.hdb  OpenGDEMU.root_partition.map.hbdb.sig  OpenGDEMU.root_partition.map.hdb  OpenGDEMU.root_partition.map.kpt
FPGA/sources/: OpenGDEMUTop.v  demo.sby  demo.sv
FPGA/sources/ip/: Audio_PLL.ppf  Audio_PLL.qip  Audio_PLL.v  Audio_PLL_bb.v  Double_PLL.ppf  Double_PLL.qip  Double_PLL.v  Double_PLL_bb.v  FIFO.qip  FIFO.v  FIFO_bb.v
FPGA/sources/ip/greybox_tmp/: cbx_args.txt
FPGA/spinalhdl/: CMakeLists.txt  OpenGDEMU.v  build.sc
FPGA/spinalhdl/src/main/scala/: AddressMapMCU.md  GDROM.scala  IDEAddressDecode.scala  IDEDeviceController.scala.old  IDEDeviceRegs.scala  IDERegister.scala  MCUBus.scala  MCUInterface.scala  MCURegister.scala  MCURegisterManager.scala  MCURegisters.scala  OpenGDEMU.scala  PATAInterface.scala  PATARegisters.scala  PATA_HDD.scala
FPGA/spinalhdl/src/main/scala/blackbox/: fifo.scala
PCB/: GDEMU.sch  (+5 more)
(+996 files in other folders)
