project(log)

add_library(${PROJECT_NAME} 
    src/log.cpp
    )

target_link_libraries(${PROJECT_NAME} 
    openGDEMU_Drivers
    argon
)

target_include_directories(${PROJECT_NAME}
    PUBLIC ${PROJECT_SOURCE_DIR}/include
    PRIVATE ${PROJECT_SOURCE_DIR}/src
)

target_compile_definitions(${PROJECT_NAME} PRIVATE
    NANOPRINTF_USE_FIELD_WIDTH_FORMAT_SPECIFIERS=0
    NANOPRINTF_USE_PRECISION_FORMAT_SPECIFIERS=0
    NANOPRINTF_USE_FLOAT_FORMAT_SPECIFIERS=0
    NANOPRINTF_USE_LARGE_FORMAT_SPECIFIERS=0
    NANOPRINTF_USE_BINARY_FORMAT_SPECIFIERS=0
    NANOPRINTF_USE_WRITEBACK_FORMAT_SPECIFIERS=0
)